styling(events): general fix alignment and no hover background color

--- a/components/blog-feed/blog-feed.less
+++ b/components/blog-feed/blog-feed.less
@@ -45,7 +45,7 @@
 		margin-bottom: 10px;
 		font-weight: 500;
 		font-style: italic;
-		
+		opacity: 0.6
 	}
 
 	& > h2 {
