--- a/components/social-events/social-events.less
+++ b/components/social-events/social-events.less
@@ -5,13 +5,14 @@
 	float: left;
 	background-color: @purple;
 	color: @white;
-	padding: 20px 0 33px 0;
+	padding: 20px 0 0 0;
 
 	@media @screen-large {
 		position: relative;
 		bottom: 277px;
 		width: 50%;
 		text-align: left;
+		padding: 38px 0 0 0;
 	}
 	
 }
@@ -22,13 +23,24 @@
 	text-align: left;
 	margin-bottom: 0;
 	opacity: 0.6;
+	font-weight: 500;
+	font-size: @subtitle-small-s;
+	
+	@media @screen-large {
+		font-size: @title-small-s;
+	}
 }
 
 .social-event {
 	width: 100%;
 	text-align: center;
-	padding: 30px 16px 0px 16px;
+	padding: 40px 16px 0px 16px;
+	line-height: normal;
 	
+	& > button {
+		margin-bottom: 35px;
+	}
+
 	@media @screen-large {
 		text-align: left;
 		height: 201px;
@@ -45,14 +57,21 @@
 
 .social-event-header {
 	font-size: @title-large-s;
-	margin-bottom: 0;
+	margin-bottom: 15px;
+	line-height: 35px;
+
+	@media @screen-large {
+		margin-bottom: 20px;
+	}
 }
 
 .social-event-text-small {
 	width: 100%;
 	display: block;
 	font-size: 14px;
-	line-height: 42px;
+	line-height: 16px;
+	font-weight: 500;
+	margin-bottom: 10px;
 }
 
 .social-event-text-large {
@@ -61,26 +80,39 @@
 	font-weight: bold;
 	font-size: @text-medium-s;
 	margin-bottom: 30px;
+
+	@media @screen-large {
+		font-size: @subtitle-large-m;
+		margin-bottom: 18px;
+	}
 }
 
 .social-event-footer {
 	width: 100%;
 	background: @purple;
 	text-align: center;
+	top: -6px;
+	position: relative;
 	
 	& > button {
-		margin: 0;
-		padding: 25px 0 0 0;
-		border: none;
-		color: @white;
-		& > .icon > svg > path {
-			fill: @white;
-		}
+		margin: 25px auto;	
+	}
+
+	@media @screen-large {
+		& > button {
+			margin: 22px auto;	
+		}	
 	}
 }
+
 .social-event-divider {
 	width: 100%;
 	height: 2px;
 	border-bottom: 1px solid @white;
-	margin-top: 35px;
+	margin-top: 0;
+	@media @screen-large {
+		bottom: 110px;
+		margin-top: 30px;
+		position: relative;
+	}
 }
