--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -126,6 +126,9 @@
     border: none;
     padding: 0;
     display: block;
+    &:hover {
+        background: transparent;
+    }
 }
 
 .btn-white {
